Add: New apis are added and fixed
